--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,6 @@ jobs:
         with:
           host: ${{ secrets.FTP_HOST}}
           username: ${{ secrets.FRP_USER }}
-          key: ${{ secrets.FTP_PASSWORD }}
+          password: ${{ secrets.FTP_PASSWORD }}
           port: 22
           script: passenger-config restart-app /
