--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,15 @@ jobs:
       - name: Get latest code
         uses: actions/checkout@v2
 
+      - name: Restart App
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.FTP_HOST}}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          port: 22
+          script: passenger-config restart-app /
+
       - name: Use Node.js 18
         uses: actions/setup-node@v2
         with:
