--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,10 @@ jobs:
         with:
           node-version: '18'
 
-      - name: 🔨 Build Project
-        run: |
-          npm install && cd api && npm install && cd ..
-          npm run build
+#       - name: 🔨 Build Project
+#         run: |
+#           npm install && cd api && npm install && cd ..
+#           npm run build
 
 #       - name: 📂 Upload Site
 #         uses: SamKirkland/FTP-Deploy-Action@4.3.1
@@ -47,7 +47,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.FTP_HOST}}
-          username: ${{ secrets.FRP_USER }}
+          username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
           port: 22
           script: passenger-config restart-app /
