--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,20 @@ jobs:
         with:
           node-version: '18'
 
-#       - name: 🔨 Build Project
-#         run: |
-#           npm install && cd api && npm install && cd ..
-#           npm run build
+      - name: 🔨 Build Project
+        run: |
+          npm install && cd api && npm install && cd ..
+          npm run build
 
-#       - name: 📂 Upload Site
-#         uses: SamKirkland/FTP-Deploy-Action@4.3.1
+      - name: 📂 Upload Site
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{secrets.FTP_HOST}}
+          username: ${{secrets.FTP_USER}}
+          password: ${{secrets.FTP_PASSWORD}}
+          port: 22
+          source: "build/*"
+          target: "/home/minicms/public_html"
 #         with:
 #           server: ${{ secrets.FTP_HOST }}
 #           username: ${{ secrets.FTP_USER }}
