--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,6 @@ jobs:
       - name: Get latest code
         uses: actions/checkout@v2
 
-      - name: Restart App
-        uses: appleboy/ssh-action@v0.1.6
-        with:
-          host: ${{ secrets.FTP_HOST}}
-          username: ${{ secrets.FTP_USER }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          port: 22
-          script: passenger-config restart-app /
-
       - name: Use Node.js 18
         uses: actions/setup-node@v2
         with:
@@ -32,6 +23,7 @@ jobs:
         run: |
           npm install && cd api && npm install && cd ..
           npm run build
+          mv build public_html
 
       - name: 📂 Upload Site
         uses: appleboy/scp-action@master
@@ -40,16 +32,9 @@ jobs:
           username: ${{secrets.FTP_USER}}
           password: ${{secrets.FTP_PASSWORD}}
           port: 22
-          source: "build/*"
-          target: "/home/minicms/public_html"
-#         with:
-#           server: ${{ secrets.FTP_HOST }}
-#           username: ${{ secrets.FTP_USER }}
-#           port: 21
-#           password: ${{ secrets.FTP_PASSWORD }}
-#           protocol: ftp
-#           local-dir: build/
-#           server-dir: /home/minicms/public_html/
+          source: "public_html"
+          target: "/home/minicms"
+
       - name: Restart App
         uses: appleboy/ssh-action@v0.1.6
         with:
