--- a/package.json
+++ b/package.json
@@ -11,29 +11,35 @@
     "build:frontend": "vite build",
     "build:backend": "node scripts/build.js",
     "preview": "vite preview",
-    "start": "cd build && node server.js",
+    "start": "cd build && node server.cjs",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^11.0.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/morgan": "^1.9.4",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-typescript": "^1.0.1",
     "svelte": "^3.55.1",
     "svelte-check": "^2.10.3",
     "tslib": "^2.5.0",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "@rollup/plugin-commonjs": "^24.0.1",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
-    "@rollup/plugin-typescript": "^11.0.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
     "vite-plugin-mix": "^0.4.0"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "morgan": "^1.10.0",
+    "polka": "^0.5.2",
+    "serve-static": "^1.15.0",
+    "svelte-navigator": "^3.2.2",
     "yesvelte": "^0.0.2-next.77",
     "yup": "^1.0.0"
   },
